--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "apollo-pro-frontend",
+  "name": "apollo-assembly-frontend",
   "type": "module",
-  "description": "Astro frontend for the ApostropheCMS + Astro Apollo template",
+  "description": "Astro frontend for the ApostropheCMS Multisite + Astro Apollo template",
   "version": "1.0.0",
   "scripts": {
     "dev": "APOS_EXTERNAL_FRONT_KEY=dev astro dev",
@@ -15,8 +15,12 @@
     "node": ">=20.3.0 <21 || >=22.0.0",
     "npm": ">=9.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apostrophecms/starter-kit-astro-apollo-assembly"
+  },
   "dependencies": {
-    "@apostrophecms/apostrophe-astro": "^1.5.0",
+    "@apostrophecms/apostrophe-astro": "^1.5.2",
     "@astrojs/node": "^9.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
