--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "serve": "NODE_ENV=production node app",
     "release": "npm install && npm run build && npm run migrate",
     "migrate": "NODE_ENV=production node app --all-sites @apostrophecms/migration:migrate",
+    "test": "npm run lint",
+    "lint": "eslint . && stylelint {dashboard,sites}/modules/**/*.{scss,vue}",
     "load-starter-content": "./scripts/load-starter-content"
   },
   "engines": {
