--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "npm run build --workspaces",
     "migrate": "npm run migrate --workspace=backend",
     "serve-frontend": "npm run serve --workspace=frontend",
-    "serve-backend": "npm run serve --workspace=backend",
-    "load-starter-content": "npm run load-starter-content --workspace=backend"
+    "serve-backend": "npm run serve --workspace=backend"
   },
   "repository": {
     "type": "git",
