--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
     "@apostrophecms-pro/document-versions": "^2.6.0",
     "@apostrophecms-pro/import-export-translation": "^1.0.3",
     "@apostrophecms-pro/multisite": "^4.4.1",
-    "@apostrophecms-pro/multisite-dashboard": "^1.4.3",
+    "@apostrophecms-pro/multisite-dashboard": "github:apostrophecms/multisite-dashboard#main",
     "@apostrophecms-pro/palette": "^4.8.1",
     "@apostrophecms-pro/seo-assistant": "^1.2.1",
     "@apostrophecms/favicon": "^1.1.3",
@@ -39,7 +39,7 @@
     "@apostrophecms/open-graph": "^1.2.3",
     "@apostrophecms/seo": "^1.3.1",
     "@apostrophecms/vite": "^1.1.0",
-    "apostrophe": "^4.21.0",
+    "apostrophe": "github:apostrophecms/apostrophe#main",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
