--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "start": "node app",
     "dev": "APOS_EXTERNAL_FRONT_KEY=dev nodemon",
-    "build": "NODE_ENV=production node app --all-sites @apostrophecms/asset:build",
+    "build": "./deployment/build",
     "serve": "NODE_ENV=production node app",
     "release": "npm install && npm run build && npm run migrate",
-    "migrate": "NODE_ENV=production node app --all-sites @apostrophecms/migration:migrate",
+    "migrate": "./deployment/migrate",
     "test": "npm run lint",
     "lint": "eslint . && stylelint {dashboard,sites}/modules/**/*.{scss,vue}"
   },
