APOS_UPLOADFS_ASSETS=1 consistently used

--- a/backend/deployment/build
+++ b/backend/deployment/build
@@ -1,5 +1,6 @@
 #!/bin/bash
 
 export NODE_ENV=production
+export APOS_UPLOADFS_ASSETS=1
 node app @apostrophecms/asset:build --site=dashboard 
 node app @apostrophecms/asset:build --all-sites
