--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app",
+    "start": "APOS_UPLOADFS_ASSETS=1 node app",
     "dev": "APOS_EXTERNAL_FRONT_KEY=dev nodemon",
     "build": "./deployment/build",
     "serve": "NODE_ENV=production node app",
