--- a/backend/deployment/build
+++ b/backend/deployment/build
@@ -3,4 +3,4 @@
 export NODE_ENV=production
 export APOS_UPLOADFS_ASSETS=1
 node app @apostrophecms/asset:build --site=dashboard 
-node app @apostrophecms/asset:build --all-sites
+./deployment/for-all-themes @apostrophecms/asset:build
